Enhance lyrics analysis and caching: Added Redis caching for lyrics analysis results to improve performance. Updated README with setup instructions and new features. Modified Docker configuration to include Redis service. Refactored lyrics analysis service to utilize caching and updated API documentation accordingly.

--- a/sample.env
+++ b/sample.env
@@ -3,5 +3,9 @@ DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 DJANGO_PORT=8000
 
+# Redis settings
+REDIS_PORT=6379
+
+# API Keys
 DEEPSEEK_API_KEY=
 DEEPSEEK_API_URL=
