--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,5 +14,19 @@ services:
       - ../.env
     ports:
       - "${DJANGO_PORT}:8000"
+    depends_on:
+      - redis
+  
+  redis:
+    image: redis:7-alpine
+    container_name: lyriclens_redis
+    restart: always
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --save 60 1 --loglevel warning
+
 volumes:
   data:
+  redis_data:
